[package]
name = "SolanaClient"
version = "0.1.0"
edition = "2021"
[dependencies]
borsh = "1.5.1"
sha2 = "0.10.8"

#solana-rpc-client = "2.0.7"
#solana-program = "2.0.7"
#solana-sdk = "2.0.7"
#solana-client = "2.0.7"

#mpl-token-metadata = "4.1.2"
#mpl-core = "0.8.0"


mpl-token-metadata = "4.1.2"
solana-client = "1.10.35"
solana-program = "1.10.35"
solana-sdk = "1.10.35"
#anchor-lang = {version =  "0.30.1", features = ["init-if-needed"]}
